--- a/src/settings.scss
+++ b/src/settings.scss
@@ -1,4 +1,9 @@
-@use 'vuetify/settings' with (
-  $color-pack: false,
+@forward 'vuetify/settings' with (
   $utilities: false,
+  $button-height: 40px,
+  $button-background: orange,
 );
+
+@forward 'vuetify' with (
+  $body-font-family: 'Open Sans',
+)
