--- a/src/settings.scss
+++ b/src/settings.scss
@@ -7,3 +7,6 @@
 @forward 'vuetify' with (
   $body-font-family: 'Open Sans',
 )
+
+/* font-family: 'IBM Plex Mono', monospace;
+font-family: 'Open Sans', sans-serif; */
