Done minimal functionality for SearchPage

--- a/src/settings.scss
+++ b/src/settings.scss
@@ -1,8 +1,11 @@
 @use 'vuetify/settings' with (
 //   // Place SASS variable overrides here
-  $button-background: orange,
+  $button-background: #73C2AE,
   $body-font-family: 'Open Sans',
+  $application-background: #141D39,
 );
 
-/* font-family: 'IBM Plex Mono', monospace;
-font-family: 'Open Sans', sans-serif; */
+/*
+font-family: 'IBM Plex Mono', monospace;
+font-family: 'Open Sans', sans-serif;
+*/
