Make file content appear by click on the item in the list

--- a/src/settings.scss
+++ b/src/settings.scss
@@ -2,7 +2,7 @@
 //   // Place SASS variable overrides here
   $button-background: #73C2AE,
   $body-font-family: 'Open Sans',
-  $application-background: #141D39,
+  $application-background: #fff,
 );
 
 /*
